Analysis of the exponential distribution

--- a/report.Rmd
+++ b/report.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Statistical Inference Course Project"
+title: "Statistical Analysis of the Exponential Distribution in R"
 author: "Arun K Viswanathan"
-date: "January 16th, 2015"
+date: "January 17th, 2015"
 output: html_document
 ---
 
@@ -13,31 +13,81 @@ the Central Limit Theorem.
 # Simulations
 
 ```{r,echo=TRUE}
-lambda <- 0.2    # Lamdba
-n <- 40          # Number of exponentials
-numsim <- 100000 # Number of simulations
+lambda <- 0.2     # Lamdba
+n <- 40           # Number of exponentials
+numsim <- 1000000 # Number of simulations
 ```
 
-We simulate an exponential distribution with `r n` exponentials and lamda of 
-`r lambda`. The simulation is performed `r numsim` times. 
+We simulate an exponential distribution using `rexp`, with `r n` exponentials 
+and lamda of `r lambda`. The simulation is performed 
+`r format(numsim, scientific=FALSE)` times.  The code below shows the 
+simulation in action:
 
 ```{r,echo=TRUE}
-mean.theoretical <- 1/lambda
-sd.theoretical <- 1/lambda
 sim <- matrix(rexp(n * numsim, lambda), numsim) 
-means.sim <- apply(sim, 1, mean)
-mean.sim <- mean(means.sim)
-hist(means.sim,
-     main = "Distribution of sample means",
-     xlab = "Means",
-     ylab = "Frequency",
-     col = "lightyellow2")
-abline(v = mean.sim, col = "darkred", lw = 2)
-# TODO: Overlay density function and standard distribution
 ```
 
 # Sample Mean versus Theoretical Mean
 
+The code below computes the sample mean from the simulated data.
+
+```{r,echo=TRUE}
+mean.theoretical <- 1/lambda
+means.sim <- apply(sim, 1, mean)
+mean.sim <- mean(means.sim)
+mean.error <- abs(mean.sim - mean.theoretical) / mean.theoretical * 100
+```
+
+The sample mean is **`r format(mean.sim)`** while the theoretical mean is 
+**`r mean.theoretical`**. This is an error of **`r format(mean.error)`%**. This
+clearly shows that the Central Limit Theorem in action as the mean of the
+simulated means is almost the same as the theoretical mean.
+
 # Sample Variance versus Theoretical Variance
 
+The sample variance can be computed using the code show below:
+
+```{r,echo=TRUE}
+sd.theoretical <- 1/lambda
+var.theoretical <- sd.theoretical ^ 2
+sds.sim <- apply(sim, 1, sd)
+sd.sim <- mean(sds.sim)
+var.sim <- sd.sim ^ 2
+var.error <- abs(var.sim - var.theoretical) / var.theoretical * 100
+```
+
+The average sample variance is **`r format(var.sim)`** (standard deviation of 
+`r format(sd.sim)`) while the theoretical variance is 
+**`r var.theoretical`** (standard deviation of `r format(sd.theoretical)`). 
+This is an error of **`r format(var.error)`%** in the variance.
+
 # Distribution
+
+The plot below shows the distribution of the _simulated samples_.
+
+```{r,echo=TRUE}
+library(ggplot2)
+g <- ggplot(data.frame(x = as.vector(sim)), aes(x = x)) +
+    geom_histogram(aes(fill = ..count..), binwidth = 1) +
+    ggtitle("Distribution of samples (exponential distribution)") +
+    xlab("Sample Value") +
+    ylab("Frequency") 
+print(g)
+````
+
+The histogram below shows the distribution of the _sample means_. The red 
+vertical dashed line is the mean of the sample means and is at `r mean.sim`.
+
+```{r,echo=TRUE}
+g <- ggplot(data.frame(x = means.sim), aes(x = x)) +
+    geom_histogram(aes(fill = ..count..), binwidth = 0.25) +
+    ggtitle("Distribution of sample means") +
+    xlab("Frequency") +
+    ylab("Sample mean") +
+    geom_vline(xintercept = mean.sim, colour = "darkred", linetype = "longdash")
+print(g)
+```
+
+Looking at the histogram above, the distribution of the sample means appears
+to be close to a normal distribution.
+
