--- a/report_toothgrowth.Rmd
+++ b/report_toothgrowth.Rmd
@@ -28,20 +28,35 @@ The dataset contains a total of `r nrow(ToothGrowth)` observations. Here's a
 summary of the raw data. 
 
 ```{r, echo=TRUE}
-summary(ToothGrowth)
+data <- transform(ToothGrowth, dose = as.factor(dose))
+summary(data)
 ```
 
-The plot below shows the tooth growth ranges for each dosage level of each 
-supplement.
+The plot below shows the tooth growth ranges for each dosage level.
 
 ```{r, echo=TRUE}
 library(ggplot2)
-g <- ggplot(ToothGrowth, aes(x = supp, y = len, fill = dose)) +
+g <- ggplot(data, aes(x = supp, y = len, fill = dose)) +
     geom_boxplot() +
     facet_grid(. ~ dose) + 
-    ggtitle("Tooth Growth by Supplement Type for each Dose") +
+    ggtitle("Tooth Growth by Supplement Type") +
     xlab("Supplement") +
-    ylab("Length of Tooth Growth") 
+    ylab("Length of Tooth Growth") +
+    guides(fill = guide_legend(title = "Dose"))
+print(g)
+```
+
+An alternate view of the data is to compate tooth growth ranges for each 
+supplement.
+
+```{r, echo=TRUE}
+g <- ggplot(data, aes(x = dose, y = len, fill = supp)) +
+    geom_boxplot() +
+    facet_grid(. ~ supp) + 
+    ggtitle("Tooth Growth by Dose") +
+    xlab("Dose") +
+    ylab("Length of Tooth Growth") +
+    guides(fill = guide_legend(title = "Supplement"))
 print(g)
 ```
 
